Format:
01/26/2025
Functionalities Added
    - Added dungeon_generation.c file
    - Added room struct
    - Added dungeon border
    
Functionalities Changed
    - Item
Bug Fixes
    - Fixed dungeon border generating wrong
Bugs Discovered
    - Dungeon border generating wrong